--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,12 +35,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/proyectoPOO
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-5.1.46.jar=conector\\mysql-connector-java-5.1.46.jar
 file.reference.mysql-connector-java-8.0.29.jar=C:\\Users\\juand\\Downloads\\mysql-connector-java-8.0.29\\mysql-connector-java-8.0.29\\mysql-connector-java-8.0.29.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.29.jar}
+    ${file.reference.mysql-connector-java-8.0.29.jar}:\
+    ${file.reference.mysql-connector-java-5.1.46.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
